Lista de personajes V.0.0.3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<h1>{{ title }} </h1>
-<hr>
-<app-contador></app-contador>
-<hr>
-<div class="row">
+<!-- <h1>{{ title }} </h1> -->
+<!-- <app-contador></app-contador> -->
+<!-- <hr> -->
+<!-- <div class="row">
     <app-heroes-heroe class="col"></app-heroes-heroe>
     <app-heroes-lista class="col"></app-heroes-lista>
-</div>
+</div> -->
+<dbz-main-page></dbz-main-page>
+<hr>
