Añadir a lista de personajes V.0.0.4

--- a/src/app/dbz/components/add-personaje/add-personaje.component.html
+++ b/src/app/dbz/components/add-personaje/add-personaje.component.html
@@ -1,9 +1,10 @@
 <h4>Agregar personaje</h4>
     
-<form class="row">
-    <input type="text" class="form-control mb-2 " placeholder="Nombre">
-    <input type="number" class="form-control mb-2 " placeholder="Poder">
+<form class="row" (ngSubmit)="emit_form()">
+    <input type="text" name="Nombre" [(ngModel)]="personaje.nombre" class="form-control mb-2 " placeholder="Nombre">
+    <input type="number" name="Poder" [(ngModel)]="personaje.poder" class="form-control mb-2 " placeholder="Poder">
     <button class="btn  btn-primary ">
         Agregar
     </button>
 </form>
+
