--- a/src/app/dbz/pages/main-page.components.html
+++ b/src/app/dbz/pages/main-page.components.html
@@ -6,6 +6,6 @@
     </div>
     
     <div class="col">
-        <dbz-add-personaje></dbz-add-personaje>
+        <dbz-add-personaje (emit_NewPersonaje)="recibir_NewPersonaje($event)"></dbz-add-personaje>
     </div>
 </div>
