--- a/src/app/dbz/components/lista-personajes/lista-personajes.component.html
+++ b/src/app/dbz/components/lista-personajes/lista-personajes.component.html
@@ -1,6 +1,14 @@
 <h4>Lista de Personajes</h4>
 <ul class="list-group">
-    <li *ngFor="let personaje of ListaPersonajes" class="list-group-item">
-        <b>{{personaje.nombre}}</b> = Poder: {{ personaje.poder }}
+    <li
+        *ngFor="let personaje of ListaPersonajes; index as i"
+        class="list-group-item d-flex justify-content-lg-between align-items-center "
+    >
+        <div>
+            {{ i+1 }}.
+            <b>{{personaje.nombre}}</b>
+            = Poder: {{ personaje.poder }}
+        </div>
+        <button class="btn btn-danger ">X</button>
     </li>
 </ul>
