--- a/src/app/dbz/components/add-personaje/add-personaje.component.html
+++ b/src/app/dbz/components/add-personaje/add-personaje.component.html
@@ -1,6 +1,6 @@
 <h4>Agregar personaje</h4>
     
-<form class="row" (ngSubmit)="emit_form()">
+<form class="row" (ngSubmit)="emit_AddPersonaje()">
     <input type="text" name="Nombre" [(ngModel)]="personaje.nombre" class="form-control mb-2 " placeholder="Nombre">
     <input type="number" name="Poder" [(ngModel)]="personaje.poder" class="form-control mb-2 " placeholder="Poder">
     <button class="btn  btn-primary ">
